Update index.html and tweets.html with consistent header, main, aside, footer structure

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,27 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Main Title of the Page</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-<p>This is the first paragraph. It introduces the content of the page in a simple way.</p>
+    <main>
+        <article>
+            <h1>Welcome to My First Portfolio</h1>
+            <h2>Introduction</h2>
+            <h3>Getting Started</h3>
+            <p>Paragraph 1</p>
+            <p>Paragraph 2</p>
+            <p>Paragraph 3</p>
+            <p>Paragraph 4</p>
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+            </a>
 
-<h2>Section Title</h2>
+            <!-- Table of learners -->
+            <div>
+                <table>
+                    <thead>
+                        <tr><th>Name</th><th>Age</th><th>Country</th></tr>
+                    </thead>
+                    <tbody>
+                        <tr><td>John</td><td>25</td><td>USA</td></tr>
+                        <tr><td>Emily</td><td>28</td><td>Canada</td></tr>
+                        <tr><td>Michael</td><td>32</td><td>Australia</td></tr>
+                        <tr><td>Sophia</td><td>21</td><td>UK</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </article>
 
-<p>This is the second paragraph. It provides more explanation and helps structure the page.</p>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-<h3>Subsection Title</h3>
-
-<p>This is the third paragraph. It gives additional information beneath the subsection.</p>
-
-<p>This is the fourth paragraph. It completes the required number of paragraphs for the task.</p>
-
-<!-- Clickable image -->
-<a href="https://www.alxafrica.org" target="_blank">
-  <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Clickable ALX Logo">
-</a>
-
+    <footer>
+        <p>Made by Abdul Hakeem - <a href="https://github.com/abdulzarmani" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
