--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Tweets</title>
+</head>
+<body>
     <header>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tweets.html">Tweets</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
     </header>
 
     <main>
-      <article>
-        <h1>My Tweets</h1>
+        <article>
+            <h1>My Tweets</h1>
 
-        <!-- Example embedded tweet -->
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">Just setting up my Twitter.</p>
-          &mdash; Jack (@jack)
-          <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw"
-            >March 21, 2006</a
-          >
-        </blockquote>
-        <script
-          async
-          src="https://platform.twitter.com/widgets.js"
-          charset="utf-8"
-        ></script>
+            <!-- Embedded tweet example -->
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Just setting up my Twitter.</p>&mdash; Jack (@jack)
+                <a href="https://twitter.com/jack/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-        <!-- Link back to homepage -->
-        <p><a href="index.html">Back to Home</a></p>
-      </article>
+            <p><a href="index.html">Back to Home</a></p>
+        </article>
 
-      
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
     </main>
 
-    
-  </body>
+    <footer>
+        <p>Made by Abdul Hakeem - <a href="https://github.com/abdulzarmani" target="_blank">here</a></p>
+    </footer>
+</body>
 </html>
